home fixing issue of text not showing

--- a/styles.css
+++ b/styles.css
@@ -474,6 +474,12 @@ main{
         width: 80px;
         font-size: x-small;
     }
+    .home{
+        display: grid;
+        grid-template-columns: auto;
+        justify-content: center;
+        align-items: center;
+    }
 }
 @media screen and (max-width: 614px){
     nav{
